<resources>
    <string name="app_name">Lab 1.2 BMI</string>
    <string name="input_weight">Weight (kg)</string>
    <string name="input_height">Height (cm)</string>
    <string name="view_result">BMI </string>
    <string name="normal"></string>
    <string name="over"></string>
    <string name="under"></string>
    <string name="calculate">Calculate</string>

    <string name="reset">Reset</string>
</resources>
